--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,4 +1,4 @@
-.monaco-large {
+.monaco {
     font-family: monaco, monospace;
 }
 
@@ -7,8 +7,7 @@
 }
 
 div {
-padding-top: 0em;
-padding-left: 6em;
+    padding-left: 6em;
 }
 
 h1 {
